syntax = "proto3";

package sfc_generaltemplate;

option csharp_namespace = "SFC.GeneralTemplate.Contracts.Headers";

message PaginationHeader
{
    int32 current_page = 1;
    int32 total_pages = 2;
    int32 page_size = 3;
    int32 total_count = 4;
    bool has_previous_page = 5;
    bool has_next_page = 6;
}